Added a sampling function, a pickle processing function and revised the previous readPickle function. Also revised the requirements.txt document.

--- a/preprocess_notebook.ipynb
+++ b/preprocess_notebook.ipynb
@@ -10,6 +10,8 @@
     "1. Extract lines\n",
     "2. Store surplus\n",
     "3. Pair lines\n",
+    "4. Clear punctuation\n",
+    "5. Sample the dataset\n",
     "\n",
     "## Imports\n",
     "Below are all the libraries used for this notebook"
@@ -17,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "run_control": {
      "marked": false
@@ -27,7 +29,9 @@
    "source": [
     "import re\n",
     "import pickle\n",
-    "import copy"
+    "import copy\n",
+    "\n",
+    "import nltk"
    ]
   },
   {
@@ -41,7 +45,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "def clean(input_location: str, output_location: str, chunk_size = 1048576):\n",
@@ -79,7 +87,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "def pair(temp: list, lines: list) -> list:\n",
@@ -107,7 +119,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "def getLines(temp_str: str) -> (list, str):\n",
@@ -133,24 +149,194 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pickle Functions:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "def readPickle(pickle_off: str, limiter = -1):\n",
     "    \"\"\" Read the pickle either in a limited amount of chunks or all\n",
     "    of them at once. \"\"\"\n",
     "    objects = []\n",
-    "    file_stream = (open(pickle_off, \"rb\"))\n",
+    "    file_stream = open(pickle_off, \"rb\")\n",
     "    while limiter != 0:\n",
     "        try:\n",
     "            objects.append(pickle.load(file_stream))\n",
     "            limiter -= 1\n",
     "        except EOFError:\n",
     "            break\n",
+    "    file_stream.close()\n",
     "    return objects"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def processPickle(pickle_off: str, process=lambda x:x, limiter = -1, store=False):\n",
+    "    \"\"\" Takes in a pickle, reads it in chunks and applies the process function to it in each chunk.\n",
+    "    Depending on the store value, it either stores the results in a list and returns it or returns nothing.\n",
+    "    The process function can only have one input which is the read object from the pickle. \"\"\"\n",
+    "    \n",
+    "    objects = []\n",
+    "    file_stream = open(pickle_off, \"rb\")\n",
+    "    \n",
+    "    while limiter != 0:\n",
+    "        try:\n",
+    "            if store:objects.append(process(pickle.load(file_stream)))\n",
+    "            else:process(pickle.load(file_stream))\n",
+    "            limiter -= 1\n",
+    "        except EOFError: # When there is nothing else to read\n",
+    "            break\n",
+    "    file_stream.close()\n",
+    "    if store: return objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getLen(lines: list)->int:\n",
+    "    \"\"\" Takes a list of lines, prints and returns the length. \"\"\"\n",
+    "    l = len(lines)\n",
+    "    print(f\"The length of this chunk is {l} lines\")\n",
+    "    return l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of this chunk is 83064 lines\n",
+      "The length of this chunk is 75154 lines\n",
+      "The length of this chunk is 77409 lines\n",
+      "The length of this chunk is 95147 lines\n",
+      "The length of this chunk is 84284 lines\n",
+      "The length of this chunk is 81818 lines\n",
+      "The length of this chunk is 74158 lines\n",
+      "The length of this chunk is 71400 lines\n",
+      "The length of this chunk is 75132 lines\n",
+      "The length of this chunk is 77556 lines\n",
+      "The length of this chunk is 49404 lines\n",
+      "The total length of pickle is 844526 lines\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In order to get the full length of a pickle, we do\n",
+    "full_l = sum(processPickle(\"data/sample0.pkl\",process = getLen, store = True))\n",
+    "print(f\"The total length of pickle is {full_l} lines\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# The pattern to tokenize each sentence\n",
+    "pattern = r'''(?x)           # set flag to allow verbose regexps\n",
+    "     (?:[A-Z]\\.)+            # abbreviations, e.g. U.S.A.\n",
+    "   | \\w+(?:[-']\\w+)*[,:;']?  # words with optional internal hyphens\n",
+    "'''\n",
+    "\n",
+    "def cleanPunc(line: str) -> list:\n",
+    "    \"\"\" Takes a string, makes all of them lowercase and tokenizes it, getting rid of unwanted characters. \"\"\"\n",
+    "    return nltk.regexp_tokenize(line.lower(), pattern)\n",
+    "\n",
+    "def samplingDataset(line_pairs: list, sampleCheck) -> list:\n",
+    "    \"\"\" Takes a list of tokenized pairs, and a function to check one of the tokenized lists.\n",
+    "    Extracts the ones that return true for the check. \"\"\"\n",
+    "    sample = list()\n",
+    "    for en, nl in line_pairs:\n",
+    "        temp_en = cleanPunc(en)\n",
+    "        temp_nl = cleanPunc(nl)\n",
+    "        if sampleCheck(temp_en):\n",
+    "            sample.append([\" \".join(temp_en), \" \".join(temp_nl)])\n",
+    "    return sample\n",
+    "\n",
+    "def samplingMethod1(line: list) -> bool:\n",
+    "    \"\"\" Takes in a list of strings. Checks if it has the given words in given indexes depending on\n",
+    "    the list. \"\"\"\n",
+    "    \n",
+    "    # This list is formed of lists of an index and the possible words that are supposed to be\n",
+    "    # in that index\n",
+    "    check_list = [[0, [\"he\", \"she\", \"it\"]], [1, [\"is\"]]]\n",
+    "    \n",
+    "    for index, words in check_list:\n",
+    "        if len(line) > check_list[-1][0] and line[index] not in words:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def pickleSample(output_location: str, sampleCheck=lambda x:True):\n",
+    "    \"\"\" Takes in an output location, and a function to apply sampling with. Uses the process pickle\n",
+    "    function to chunk the pickle and apply the sampling in each chunk. Then writes the cumulative\n",
+    "    result to a new pickle. \"\"\"\n",
+    "    output_file = open(f\"data/{output_location}\", \"wb\")\n",
+    "    processPickle(\"data/en_nl_line_pairs.pkl\",\n",
+    "                  process=lambda x:pickle.dump(samplingDataset(x, samplingMethod1), output_file))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Example usage\n",
+    "pickleSample(\"sample0.pkl\", sampleCheck=samplingMethod1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
