Editing the model_Changes file to be the main model file

--- a/model_changes_notebook.ipynb
+++ b/model_changes_notebook.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -19,9 +23,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "We start by reading in the data. From the database of movie subtitles we stream read the data, and saved it to a pickle file. The following code opens the pickle file and stores it as a list of lists, each nested list containing a sentence pair."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "# Function to read in the data\n",
@@ -42,19 +57,34 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "data = readPickle('data/sample1.pkl')\n",
     "pairs = []\n",
     "for i in range(len(data)):\n",
-    "    pairs += data[i]"
+    "    pairs += data[i][::-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To represent our words as vectors, we use one-hot encoding. Each word is then a large vector full of zeroes, with a one in the position of the word. The size of the vector is the length of the vocabulary. The following helper class creates a Lang object, which is useful for making our one-hot encoded word vectors. The Lang object contains two dictionaries: a word2index dictionary that has each word of our vocabulary as keys, and its index in the vector as value. The other dictionary is index2word, which does the same but is reversed. It also keeps track of how many words we have, in a word2count dictionary."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "SOS_token = 0\n",
@@ -84,9 +114,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then make two Lang classes from our dataset. The Lang class stores useful information about the words and indexes in our one-hot encoded vector. We use these classes for training. The input language is going to be English, and the output language will be Dutch."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "def lang_class_maker(data, lang1, lang2):\n",
@@ -102,17 +143,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pairs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-d2846f95d3a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minput_lang\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_lang\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlang_class_maker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpairs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'en'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'nl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'pairs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "input_lang, output_lang = lang_class_maker(pairs, 'en', 'nl')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below follow the encoder, decoder and attention decoder classes, as described by the [Pytorch tutorial](https://pytorch.org/tutorials/intermediate/seq2seq_translation_tutorial.html)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "class EncoderRNN(nn.Module):\n",
@@ -136,7 +204,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "class DecoderRNN(nn.Module):\n",
@@ -163,7 +235,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "MAX_LENGTH = 15 #This depends on the length of sentences in our sample set. For actual training it needs to be higher.\n",
@@ -206,9 +282,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need the following helper functions for our training. When given a pair of sentences, we want to make two tensors from them, containing the indexes of each word in the sentence."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "def indexesFromSentence(lang, sentence):\n",
@@ -228,9 +315,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following two functions are very useful for the human operator at the computer. The first one shows a plot with the cost per amount of iterations, which helps with determining how fast the model improves, and gives an indication of how many iterations we should use. The second one calculates the amount of time that went by, and the amount of time left until the training is completed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -251,7 +349,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "import time\n",
@@ -273,9 +375,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we are finally ready for training, which we will do with the following two functions. The first one trains for one sentence pair. The second one iterates a certain amount of times, and trains one pair of sentences in each iteration."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "def train(input_tensor, target_tensor, encoder, decoder, encoder_optimizer, decoder_optimizer, criterion, max_length=MAX_LENGTH):\n",
@@ -320,9 +433,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Here we can put the different tweaks to the models. The first one is to use teacher forcing. This basically uses the target sentence (given from the data) as input in the Recurrent Neural Network, so the model already knows the target sentence and tries to approximate this. The teacher forcing ratio can be specified in the input, and is a number between 0 and 1, indicating in how much of the cases we will apply teacher forcing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "def train_teacher(input_tensor, target_tensor, encoder, decoder, encoder_optimizer, decoder_optimizer, criterion, \n",
@@ -353,16 +477,16 @@
     "    if use_teacher_forcing:\n",
     "        # Teacher forcing: Feed the target as the next input\n",
     "        for di in range(target_length):\n",
-    "            decoder_output, decoder_hidden = decoder(\n",
-    "                decoder_input, decoder_hidden)\n",
+    "            decoder_output, decoder_hidden, decoder_attention = decoder(\n",
+    "                decoder_input, decoder_hidden, encoder_outputs)\n",
     "            loss += criterion(decoder_output, target_tensor[di])\n",
     "            decoder_input = target_tensor[di]  # Teacher forcing\n",
     "\n",
     "    else:\n",
     "        # Without teacher forcing: use its own predictions as the next input\n",
     "        for di in range(target_length):\n",
-    "            decoder_output, decoder_hidden = decoder(\n",
-    "                decoder_input, decoder_hidden)\n",
+    "            decoder_output, decoder_hidden, decoder_attention = decoder(\n",
+    "                decoder_input, decoder_hidden, encoder_outputs)\n",
     "            topv, topi = decoder_output.topk(1)\n",
     "            decoder_input = topi.squeeze().detach()  # detach from history as input\n",
     "\n",
@@ -380,8 +504,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "def trainIters(encoder, decoder, n_iters, print_every=1000, plot_every=100, learning_rate=0.01):\n",
@@ -400,7 +528,7 @@
     "        input_tensor = training_pair[0]\n",
     "        target_tensor = training_pair[1]\n",
     "\n",
-    "        loss = train(input_tensor, target_tensor, encoder,\n",
+    "        loss = train_teacher(input_tensor, target_tensor, encoder,\n",
     "                     decoder, encoder_optimizer, decoder_optimizer, criterion)\n",
     "        print_loss_total += loss\n",
     "        plot_loss_total += loss\n",
@@ -420,21 +548,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "The actual training of the model can be done by executing the following command."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'input_lang' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-70355553bb0f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# This initializes the encoder and the attention decoder. We can choose to specify the amount of hidden layers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mhidden_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m256\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mencoder1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEncoderRNN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_lang\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_words\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhidden_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mattndecoder1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAttnDecoderRNN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhidden_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_lang\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_words\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'input_lang' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# This initializes the encoder and the attention decoder. We can choose to specify the amount of hidden layers\n",
     "hidden_size = 256\n",
     "encoder1 = EncoderRNN(input_lang.n_words, hidden_size).to(device)\n",
-    "decoder1 = DecoderRNN(hidden_size, output_lang.n_words).to(device)"
+    "attndecoder1 = AttnDecoderRNN(hidden_size, output_lang.n_words).to(device)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
+    "run_control": {
+     "marked": false
+    },
     "scrolled": true
    },
    "outputs": [
@@ -457,13 +611,24 @@
    "source": [
     "# This actually trains the model. The good part about this is that you can interrupt or stop it for a bit, and run it again\n",
     "# later, to continue the same training.\n",
-    "trainIters(encoder1, decoder1, 10000, print_every=200)"
+    "trainIters(encoder1, attndecoder1, 10000, print_every=200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the model has been trained, we also want to be able to test what it's output is. The following function takes the trained encoder and decoder, and an English sentence as input, and produces a Dutch translation as output."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "def evaluate(encoder, decoder, sentence, max_length=MAX_LENGTH):\n",
@@ -503,7 +668,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "def bleu_text(target_text: list, reference_text: list, n_precision = 4, smoothing = 0):\n",
@@ -534,7 +703,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "to_be_evaluated=[[],[]]\n",
@@ -547,7 +720,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "for i in range(10):\n",
@@ -557,7 +734,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "print(bleu_text(to_be_evaluated[0], to_be_evaluated[1]))"
@@ -581,6 +762,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.5"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
