Another sample has been made, The model has been assembled to functionally train a full sample set

--- a/preprocess_notebook.ipynb
+++ b/preprocess_notebook.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "run_control": {
      "marked": false
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,13 +226,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of this chunk is 14635 lines\n",
+      "Chunk processed.\n",
+      "The length of this chunk is 14605 lines\n",
+      "Chunk processed.\n",
+      "The length of this chunk is 13056 lines\n",
+      "Chunk processed.\n",
+      "The length of this chunk is 13187 lines\n",
+      "Chunk processed.\n",
+      "The length of this chunk is 13669 lines\n",
+      "Chunk processed.\n",
+      "The length of this chunk is 14008 lines\n",
+      "Chunk processed.\n",
+      "The length of this chunk is 13855 lines\n",
+      "Chunk processed.\n",
+      "The length of this chunk is 13441 lines\n",
+      "Chunk processed.\n",
+      "The length of this chunk is 13209 lines\n",
+      "Chunk processed.\n",
+      "The length of this chunk is 13928 lines\n",
+      "Chunk processed.\n",
+      "The length of this chunk is 8941 lines\n",
+      "Chunk processed.\n",
+      "The total length of pickle is 146534 lines\n"
+     ]
+    }
+   ],
    "source": [
     "# In order to get the full length of a pickle, we do\n",
-    "# full_l = sum(processPickle(\"data/sample1.pkl\",process = getLen, store = True))\n",
-    "# print(f\"The total length of pickle is {full_l} lines\")"
+    "full_l = sum(processPickle(\"data/sample1.pkl\",process = getLen, store = True))\n",
+    "print(f\"The total length of pickle is {full_l} lines\")"
    ]
   },
   {
@@ -254,8 +284,8 @@
    "source": [
     "# The pattern to tokenize each sentence\n",
     "pattern = r'''(?x)           # set flag to allow verbose regexps\n",
-    "     (?:[A-Z]\\.)+            # abbreviations, e.g. U.S.A.\n",
-    "   | \\w+(?:[-']\\w+)*[,:;']?  # words with optional internal hyphens\n",
+    "     (?:[a-z]\\.)+            # abbreviations, e.g. U.S.A.\n",
+    "   | [a-z0-9]+(?:[-'][a-z0-9]+)*[,:;']?  # words with optional internal hyphens\n",
     "'''\n",
     "\n",
     "def cleanPunc(line: str) -> list:\n",
@@ -2153,6 +2183,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makeCorpus(pickle_off: str, pickle_to: str, corpus_num: int, limiter = -1, exists = False):\n",
+    "    input_stream = open(pickle_off, \"rb\")\n",
+    "    if exists: corpus = pickle.load(open(pickle_to, \"rb\"))\n",
+    "    else: corpus = set()\n",
+    "    while limiter != 0:\n",
+    "        try:\n",
+    "            data = pickle.load(input_stream)\n",
+    "            for row in data:\n",
+    "                for word in row[corpus_num].split():\n",
+    "                    corpus.add(word)\n",
+    "            print(\"Chunk processed.\")\n",
+    "            limiter -= 1\n",
+    "        except EOFError:\n",
+    "            break\n",
+    "    input_stream.close()\n",
+    "    output_stream = open(pickle_to, \"wb\")\n",
+    "    pickle.dump(corpus, output_stream)\n",
+    "    output_stream.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Second Corpus Started\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n",
+      "Chunk processed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "makeCorpus(\"data/sample_shorty.pkl\", \"data/en_shorty.pkl\", 0, limiter = 8)\n",
+    "print(\"Second Corpus Started\")\n",
+    "makeCorpus(\"data/sample_shorty.pkl\", \"data/nl_shorty.pkl\", 1, limiter = 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1926\n",
+      "1840\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = pickle.load(open(\"data/en_shorty.pkl\", \"rb\"))\n",
+    "b = pickle.load(open(\"data/nl_shorty.pkl\", \"rb\"))\n",
+    "print(len(a))\n",
+    "print(len(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2177,7 +2289,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.7.5"
   },
-  "notify_time": "0",
   "varInspector": {
    "cols": {
     "lenName": 16,
